# Temperature_Sensor_V2

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRIVACY.md  PROTOCOL.md  README.md  RELEASE.md  SECURITY.md  START_HERE.md  SUPPORT.md  Start.bat  Start.sh  TESTING.md  THIRD-PARTY-LICENSES.md  THIRD_PARTY_NOTICES.md  alert_monitor.py  app.py  auto_provision.py  auto_provisioner.py  config.example.json  config.json  docker-compose.yml  probe_discovery.py  provision_device.sh  provisioner.py  provisioning.py  pyproject.toml  requirements-dev.txt  requirements.txt  wifi_scan.py
.github/: PULL_REQUEST_TEMPLATE.md
api/: routes.py
assets/: manifest.json  theme.css
components/: dashboard_view.py  devices_panel.py  diagnostics_view.py  help_modal.py  layout_main.py  probe_panel.py  settings_panel.py  setup_helper.py  temp_graph.py
core/: alerts.py  applog.py  audit.py  config.py  config_schema.py  db.py  demo.py  diagnostics.py  logger.py  logging_setup.py  mdns_advert.py  metrics.py  mqtt_publish.py  notifications.py  paths.py  retention.py  status.py  storage.py  version.py
docs/: ACTION_PLAN.md  ASSEMBLY.md  BOM.md  COMPLIANCE.md  DEVELOPING.md  DIY_KIT.md  EULA.md  GO_TO_MARKET.md  HUB_RELIABILITY.md  INSTALL.md  LABEL_TEMPLATE.md  LAUNCH.md  LISTING.md  MATERIALS_AND_NEXT_STEPS.md  PCB_REV2_MODULE.md  PILOT_OFFER.md  PREORDER.md  PRODUCT_ROADMAP.md  QC_CHECKLIST.md  RELEASE_CHECKLIST.md  RELEASE_SIGNING.md  RETURNS.md  REV2_BUILD_GUIDE.md  REV2_SCHEMATIC.md  STARTUP_CHECKLIST.md  TINDIE_LISTING.md  USER_MANUAL.md  VERSIONS.md  (+4 more)
(+71 files in other folders)
