[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tempsensor"
version = "2.4.0"
description = "TempSensor — local-first wireless temperature monitoring hub"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
